@@ -1,6 +1,11 @@
 $Id$
 
+2012-11-18  Christian Franke  <franke@computer.org>
+
+	drivedb.h: Western Digital Caviar Green: Add -F xerrorlba
+
 2012-11-17  Alex Samorukov  <samm@os2.kiev.ua>
+
 	smartd.cpp: print lu_id for SPC devices, it is supported by standard
 	smartd.cpp: added initial state file support for the SCSI devices
 	smartd.cpp: add S/N to SCSI device identifier, lu_id is not available
